# NIDataCollector

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
analysis_out/: vibration_analysis.json  vibration_analysis.md
analysis_out/displacement_response/: displacement_response_analysis.json  displacement_response_channel_features.csv  displacement_response_order_peaks.csv  displacement_response_report.md  displacement_response_run_summary.csv
analysis_out/speed_vibration/: speed_vibration_analysis.json  speed_vibration_by_target_speed.csv  speed_vibration_channel_features.csv  speed_vibration_report.html  speed_vibration_run_summary.csv
analysis_out/velocity_response/: skipped_runs.json  velocity_6000_condition_analysis_report.md  velocity_6000_condition_derived.csv  velocity_order_spectrum_peaks.csv  velocity_response_analysis.json  (+7 more)
config/: app_startup.json  spindle_control.json  temperature_card.json
docs/: api.md  architecture.md  data_migration_analysis.md  ni_connection_test_report_20260702.html  ni_environment_test_report_20260702.html  ni_hardware_acquisition_report_20260702.html  temperature_sensor_diagnostic_report_20260702.html  vibration_analysis_usage.md
scripts/: acquire_vibration.py  analyze_displacement_response.py  analyze_speed_velocity_response.py  analyze_vibration_npz_xz.py  inspect_npz_xz.py  ni_probe.py  run_monitor.py
tests/: helpers.py  test_acquisition_isolation.py  test_cli.py  test_fixture_writer.py  test_spindle.py  test_temperature_card.py  test_vibration_features.py  test_vibration_io.py  test_vibration_report.py
(+49 files in other folders)
